<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/user_list_title"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/buttonAddNew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAddNew"
        app:layout_constraintStart_toStartOf="@id/buttonAddNew"
        app:layout_constraintEnd_toEndOf="@id/buttonAddNew"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>